# DrawMind3D

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  RESEARCH.md  docker-compose.yml  pyproject.toml  run.py
data/: DATA_SOURCES.md
data/evaluation/: evaluation_llm.html  evaluation_nollm.html  evaluation_results_llm.json  evaluation_results_nollm.json
data/ground_truth/: ctc01_ground_truth.json  ctc02_ground_truth.json  ctc03_ground_truth.json  ctc04_ground_truth.json  ctc05_ground_truth.json  d2mi904_ground_truth.json  d2mi905_ground_truth.json  d2mi906_ground_truth.json  d2mi907_ground_truth.json  d2mi908_ground_truth.json  ftc06_ground_truth.json  ftc07_ground_truth.json  ftc08_ground_truth.json  ftc09_ground_truth.json  ftc10_ground_truth.json  ftc11_ground_truth.json
data/synthetic/: SYN-01-SimpleBlock_ground_truth.json  SYN-02-ThreadedPlate_ground_truth.json  SYN-03-InchPart.stp  SYN-03-InchPart_ground_truth.json  SYN-04-MixedFeatures_ground_truth.json  SYN-05-ManyHoles.stp  SYN-05-ManyHoles_ground_truth.json
drawmind/: __init__.py  cli.py  config.py  models.py
drawmind/cad/: __init__.py  feature_extractor.py  mesh_exporter.py  step_reader.py  thread_table.py
drawmind/llm/: client.py  prompts.py
drawmind/matching/: __init__.py  llm_resolver.py  matcher.py  scoring.py
drawmind/output/: schema.py  (+1 more)
scripts/: evaluate.py  generate_charts.py  generate_synthetic.py
tests/: conftest.py  test_integration.py  test_matching.py  test_output_writer.py  test_pdf_extractor.py  test_step_reader.py  test_vision_filters.py
web/: app.py
(+49 files in other folders)
